[gd_scene load_steps=22 format=3 uid="uid://dhm3gg86ro6vg"]

[ext_resource type="Texture2D" uid="uid://bra8xi6qr7t4y" path="res://assets/TransmutationCircle.png" id="1_rj6li"]
[ext_resource type="Script" path="res://src/AlchemistCircle.gd" id="2_csryf"]
[ext_resource type="Resource" uid="uid://pcg5spltajvg" path="res://recipies/airrune.tres" id="3_36jho"]
[ext_resource type="Resource" uid="uid://t35egvtp35pv" path="res://recipies/albedo.tres" id="4_a73kq"]
[ext_resource type="Resource" uid="uid://lf7gcofr706o" path="res://recipies/brick.tres" id="5_0tyok"]
[ext_resource type="Resource" uid="uid://sqi1ahljyns2" path="res://recipies/Cove.tres" id="6_ynvsd"]
[ext_resource type="Resource" uid="uid://duwyjjvwcut4p" path="res://recipies/EarthRune.tres" id="7_pdbvk"]
[ext_resource type="Resource" uid="uid://c6m76j8ein5ar" path="res://recipies/fireRune.tres" id="8_h54yv"]
[ext_resource type="Resource" uid="uid://dwc547nogeq23" path="res://recipies/Flare.tres" id="9_x4o3h"]
[ext_resource type="Resource" uid="uid://cnv8r4t5o0rlw" path="res://recipies/gust.tres" id="10_jsf0g"]
[ext_resource type="Resource" uid="uid://drimnofyx4qml" path="res://recipies/ShadowSelf.tres" id="11_thjj5"]
[ext_resource type="Resource" uid="uid://d3i8ic2pcxkwi" path="res://recipies/Tsunami.tres" id="12_scc73"]
[ext_resource type="Resource" uid="uid://b3f208vh0a8cb" path="res://recipies/unstable_concoction.tres" id="13_3a6xf"]
[ext_resource type="Resource" uid="uid://gwdc4lqyx8bx" path="res://recipies/WaterRune.tres" id="14_1ppax"]
[ext_resource type="Resource" uid="uid://dxseyu3lgws45" path="res://recipies/tailwind.tres" id="15_3ff37"]
[ext_resource type="Resource" uid="uid://cenbecfl8h330" path="res://recipies/MudPuddle.tres" id="16_ug2cc"]
[ext_resource type="Resource" uid="uid://rcs2qphx4213" path="res://recipies/Burst.tres" id="17_rfqdj"]
[ext_resource type="Resource" uid="uid://dchkbvbwn1jas" path="res://recipies/rain_cloud.tres" id="18_emdn3"]
[ext_resource type="Resource" uid="uid://bw6i6knmtgrc7" path="res://recipies/imprison.tres" id="19_y2n2o"]
[ext_resource type="Resource" uid="uid://cfkx3e0dwfcup" path="res://recipies/suninabottle.tres" id="20_2xg44"]
[ext_resource type="Resource" uid="uid://uqca4l61fv5c" path="res://recipies/sword.tres" id="21_avhwd"]

[node name="AlchemistCircle" type="TextureRect"]
anchors_preset = -1
anchor_right = 0.056
anchor_bottom = 0.099
offset_right = -0.512001
offset_bottom = -0.152004
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rj6li")
script = ExtResource("2_csryf")
recipies = Array[Resource("res://src/Recipe.gd")]([ExtResource("3_36jho"), ExtResource("4_a73kq"), ExtResource("5_0tyok"), ExtResource("6_ynvsd"), ExtResource("7_pdbvk"), ExtResource("8_h54yv"), ExtResource("9_x4o3h"), ExtResource("10_jsf0g"), ExtResource("11_thjj5"), ExtResource("12_scc73"), ExtResource("13_3a6xf"), ExtResource("14_1ppax"), ExtResource("15_3ff37"), ExtResource("16_ug2cc"), ExtResource("17_rfqdj"), ExtResource("18_emdn3"), ExtResource("19_y2n2o"), ExtResource("20_2xg44"), ExtResource("21_avhwd")])

[node name="Slot1" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.359
anchor_right = 0.25
anchor_bottom = 0.641
offset_top = 0.0239983
offset_bottom = -0.0240021

[node name="Slot1Texture" type="TextureRect" parent="Slot1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Slot2" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_top = 0.359
anchor_right = 1.0
anchor_bottom = 0.641
offset_top = 0.0239983
offset_bottom = -0.0240021

[node name="Slot2Texture" type="TextureRect" parent="Slot2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_up" from="Slot1" to="." method="clear_item" binds= [0]]
[connection signal="button_up" from="Slot2" to="." method="clear_item" binds= [1]]
